# SDLC_Automation

./: .env  .gitignore  .gitmodules  README.md  api_parser_result.md  app.py  build.py  crewai_flow.html  model_list.md  new_swagger_api.yaml  prd_document.md  pyproject.toml  run_crews.py  springrun.py  swagger_api.yaml  user_portal.yaml
backend/output/: swagger_api.yaml
demo/: pom.xml
demo/src/main/resources/: application.properties  data.sql  schema.sql
env_1/: pyvenv.cfg
frontendAgent/uiagent/: .gitignore  README.md  figma_design.txt  pyproject.toml  react-app-structure.txt
frontendAgent/uiagent/src/uiagent/: main.py
frontendAgent/uiagent/src/uiagent/crews/Code/: Code.py
frontendAgent/uiagent/src/uiagent/crews/Code/config/: agents.yaml  tasks.yaml
frontendAgent/uiagent/src/uiagent/crews/PromptInterpreterAgent/: PromptInterpreterAgent.py
frontendAgent/uiagent/src/uiagent/crews/PromptInterpreterAgent/config/: agents.yaml  tasks.yaml
frontendAgent/uiagent/src/uiagent/crews/figmadesign/: figmadesign.py
frontendAgent/uiagent/src/uiagent/crews/figmadesign/config/: agents.yaml  tasks.yaml
frontendAgent/uiagent/temp/: package-lock.json  package.json
newdemo/: pom.xml
output/: swagger_api.yaml
src/: springrun.py
src/code_generator/: Final.py  Run.py  main.py
src/code_generator/Backend_crews/File_Writter/: File_writer.py
src/code_generator/Backend_crews/Model_Layer/: Model_Layer.py
src/code_generator/Backend_crews/evaluate_api_parser/: evaluate_api_parser.py
src/djangogenerator/: main.py
test/: pom.xml
test/src/main/resources/: data.sql  (+2 more)
(+41 files in other folders)
